[package]
name = "ascii-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
base64 = "0.21.2"
clap = { version = "4.3.19", features = ["derive"] }
image = "0.24.6"
lazy_static = "1.4.0"
term_size = "0.3.2"
wsl = "0.1.0"
